@@ -202,6 +202,10 @@ Core and Builtins
 Library
 -------
 
+- Issue 3551: Patch multiprocessing to raise a proper exception if the size of the
+  object when writefile is called causes a ERROR_NO_SYSTEM_RESOURCES. Added docs
+  to note the limitation
+
 - unittest.assertNotEqual() now uses the inequality operator (!=) instead 
   of the equality operator.
   
